--- a/views/auth/registro.pug
+++ b/views/auth/registro.pug
@@ -1,5 +1,14 @@
 extends ../layout/index
 
 block contenido
-    div 
-        h2.text-center Crea tu cuenta
+    div.py-10
+    h1.text-4xl.my-10.font-extrabold.text-center Bienes 
+        span.font-normal Raices
+    h2.text-center.text-2xl.font-extrabold= pagina
+
+    .mt-8.mx-auto.max-w-md
+        .bg-white.py-8.px-4.shadow
+            form
+                div
+                    label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold Tu Nombre
+                    input#nombre.w-full.px-3.py-2.border.border-gray-300
