--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,8 +1,18 @@
 extends ../layout/index
 
 block contenido
-    div 
-        if autenticado
-            p.text-center usuario autenticado
-        else
-            p.text-center Inicia sesión
+    div.py-10
+    h1.text-4xl.my-10.font-extrabold.text-center Bienes 
+        span.font-normal Raices
+    h2.text-center.text-2xl.font-extrabold= pagina
+
+    .mt-8.mx-auto.max-w-md
+        .bg-white.py-8.px-4.shadow
+            form.space-y-5
+                div
+                    label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="email") Tu Email de Registro
+                    input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu Email" type="email" name="email")
+                div
+                    label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="password") Password
+                    input#password.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu Password" type="password" name="password")
+                input(class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Iniciar Sesión")
