--- a/views/auth/olvide-password.pug
+++ b/views/auth/olvide-password.pug
@@ -12,10 +12,7 @@ block contenido
                 div
                     label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="email") Tu Email de Registro
                     input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu Email" type="email" name="email")
-                div
-                    label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="password") Password
-                    input#password.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu Password" type="password" name="password")
                 div.flex.items-center.justify-between
+                    a.text-gray-500.text-xs(href="/auth/login") ¿Ya tienes cuenta? Inicia Sesión
                     a.text-gray-500.text-xs(href="/auth/registro") ¿No tienes cuenta? Crea una
-                    a.text-gray-500.text-xs(href="/auth/olvide-password") Olvide mi contraseña
-                input(class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Iniciar Sesión")
+                input(class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer" type="submit" value="Enviar Instrucciones")
